<resources>
    <string name="app_name">Color Match</string>
    <string name="record">Record :</string>
    <string name="_0">0</string>
    <string name="wrong">Wrong:</string>
    <string name="right">Right:</string>
    <string name="start_game">Start game!</string>
    <string name="does_the_color_match_the_text">Does the color match the text?</string>
    <string name="yes">YES</string>
    <string name="no">No</string>
    <string name="time_left_00_00">Time left: \t</string>
    <string name="new_record">New record:</string>
    <string name="your_score">Your score:</string>
    <string name="restart_game">Restart game</string>
    <string name="game_over">Game Over!</string>
    <string name="settings">Settings</string>
    <string name="select_count_numbers">Count colors</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="vibration">Vibration</string>


    <string-array name="color_names">
        <item>"White"</item>
        <item>"Yellow"</item>
        <item>"Red"</item>
        <item>"Green"</item>
        <item>"Blue"</item>
        <item>"Orange"</item>
        <item>"Gray"</item>
        <item>"Violet"</item>
        <item>"Turquoise"</item>
        <item>"Lime"</item>
        <item>"Pink"</item>
    </string-array>

    <string-array name="color_names_light">
        <item>"Black"</item>
        <item>"Yellow"</item>
        <item>"Red"</item>
        <item>"Green"</item>
        <item>"Blue"</item>
        <item>"Orange"</item>
        <item>"Gray"</item>
        <item>"Violet"</item>
        <item>"Turquoise"</item>
        <item>"Lime"</item>
        <item>"Pink"</item>
    </string-array>

    <string-array name="count_colors_for_select">
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>10</item>
    </string-array>
    <string name="locl">0</string>
    <string name="many_mistakes">Many mistakes</string>
    <string name="dark">Dark</string>
    <string name="light">Light</string>
    <string name="play">Play</string>
    <string name="color_match" translatable="false">Color Match!</string>
    <string name="exit">Exit</string>
    <string name="chek_internet_connection">Check internet connection</string>
    <string name="rating">Rating</string>
    <string name="congratulations">Congratulations!</string>
    <string name="press_back_again">Press back again to exit</string>
    <string name="_4_colors">4 colors</string>
    <string name="_6_colors">6 colors</string>
    <string name="_8_colors">8 colors</string>
    <string name="_10_colors">10 colors</string>
    <string name="by_ratiug_dev">by Ratiug Dev.</string>
</resources>