<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:gravity="end"
        android:orientation="horizontal">

      <TextView
          android:id="@+id/tv_name_right"
          style="@style/topBarItems"
          android:layout_marginEnd="5dp"
          android:text="@string/right"
          android:textColor="@color/green"
          android:visibility="gone"/>

      <TextView
          android:id="@+id/tv_right_value"
          style="@style/topBarItems"
          android:text="@string/_0"
          android:textColor="@color/green"
          android:layout_marginEnd="15dp"
          android:visibility="gone"/>

      <TextView
          android:id="@+id/tv_name_wrong"
          style="@style/topBarItems"
          android:layout_marginEnd="5dp"
          android:text="@string/wrong"
          android:textColor="@color/red"
          android:visibility="gone"/>

        <TextView
            android:id="@+id/tv_wrong_value"
            style="@style/topBarItems"
            android:text="@string/_0"
            android:textColor="@color/red"
            android:layout_marginEnd="15dp"
            android:visibility="gone"/>

        <TextView
            style="@style/topBarItems"
            android:layout_marginEnd="5dp"
            android:text="@string/record"
            android:textColor="@color/yellow" />

        <TextView
            android:id="@+id/tv_record_value"
            style="@style/topBarItems"
            android:layout_marginEnd="15dp"
            android:text="@string/_0"
            android:textColor="@color/yellow" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/white" />

    <FrameLayout
        android:id="@+id/fl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blue" />

</LinearLayout>